CMR-7290: Fixes formatting of granule views

--- a/app/views/collections/descriptor_document.xml.erb
+++ b/app/views/collections/descriptor_document.xml.erb
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <os:OpenSearchDescription xmlns:os="http://a9.com/-/spec/opensearch/1.1/"
 	xmlns:echo="https://cmr.earthdata.nasa.gov/search/site/docs/search/api.html#atom"
 	xmlns:geo="http://a9.com/-/opensearch/extensions/geo/1.0/"
@@ -10,7 +10,6 @@
 	xmlns:atom="http://www.w3.org/2005/Atom" >
 	<os:ShortName>CMR Collections</os:ShortName>
 	<os:Description>NASA CMR Collection search using geo, time and parameter extensions</os:Description>
-	<os:Tags>CMR NASA CWIC CEOS-OS-BP-V1.1/L3 ESIP OGC collection pageOffset=1 indexOffset=0</os:Tags>
 	<os:Contact><%= ENV['contact']%></os:Contact>
 	<os:Url type="application/atom+xml" rel="collection"
 	    params:method="GET" template="<%= ENV['opensearch_url']%>/collections.atom?keyword={os:searchTerms?}&amp;instrument={echo:instrument?}&amp;satellite={eo:platform?}&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;hasGranules={echo:hasGranules?}&amp;isCwic={echo:isCwic?}&amp;isGeoss={echo:isGeoss?}&amp;isCeos={echo:isCeos?}&amp;isEosdis={echo:isEosdis?}&amp;isFedeo={echo:isFedeo?}&amp;provider={echo:provider?}&amp;clientId=<%= @client_id_model.clientId %>">
@@ -105,4 +104,5 @@
 	<os:Query role="example" searchTerms="Amazon River Basin Precipitation, 1972-1992" title="Sample search"/>
 	<os:Attribution>NASA CMR</os:Attribution>
 	<os:SyndicationRight>open</os:SyndicationRight>
+	<os:Tags>CMR NASA CWIC CEOS-OS-BP-V1.1/L3 ESIP OGC collection pageOffset=1 indexOffset=0</os:Tags>
 </os:OpenSearchDescription>
