--- a/app/views/collections/descriptor_document_facets.xml.erb
+++ b/app/views/collections/descriptor_document_facets.xml.erb
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <os:OpenSearchDescription xmlns:os="http://a9.com/-/spec/opensearch/1.1/"
 	xmlns:echo="https://cmr.earthdata.nasa.gov/search/site/docs/search/api.html#atom"
 	xmlns:geo="http://a9.com/-/opensearch/extensions/geo/1.0/"
@@ -11,7 +11,6 @@
 	xmlns:sru="http://docs.oasis-open.org/ns/search-ws/facetedResults" >
 	<os:ShortName>CMR Collections</os:ShortName>
 	<os:Description>NASA CMR Collection search using geo, time and parameter extensions with facet support</os:Description>
-	<os:Tags>CMR NASA CWIC CEOS-OS-BP-V1.1/L3 ESIP OGC collection facets pageOffset=1 indexOffset=0</os:Tags>
 	<os:Contact><%= ENV['contact']%></os:Contact>
 	<os:Url type="application/atom+xml" rel="collection"
 	    params:method="GET"
@@ -110,4 +109,5 @@
 	<os:Query role="example" searchTerms="Amazon River Basin Precipitation, 1972-1992" title="Sample search"/>
 	<os:Attribution>NASA CMR</os:Attribution>
 	<os:SyndicationRight>open</os:SyndicationRight>
+	<os:Tags>CMR NASA CWIC CEOS-OS-BP-V1.1/L3 ESIP OGC collection facets pageOffset=1 indexOffset=0</os:Tags>
 </os:OpenSearchDescription>
