--- a/app/views/granules/nrscc.xml.erb
+++ b/app/views/granules/nrscc.xml.erb
@@ -1,15 +1,7 @@
-<?xml version="1.0"?>
-<os:OpenSearchDescription
-	xmlns:os="http://a9.com/-/spec/opensearch/1.1/"
-	xmlns:echo="https://cmr.earthdata.nasa.gov/search/site/docs/search/api.html#atom"
-	xmlns:geo="http://a9.com/-/opensearch/extensions/geo/1.0/"
-	xmlns:time="http://a9.com/-/opensearch/extensions/time/1.0/"
-	xmlns:esipdiscovery="http://commons.esipfed.org/ns/discovery/1.2/" esipdiscovery:version="1.2"
-	xmlns:params="http://a9.com/-/spec/opensearch/extensions/parameters/1.0/"
-	xmlns:referrer="http://www.opensearch.org/Specifications/OpenSearch/Extensions/Referrer/1.0"
-	xmlns:eo="http://a9.com/-/opensearch/extensions/eo/1.0/"
-	xmlns:atom="http://www.w3.org/2005/Atom">
-	<os:ShortName>PLACEHOLDER</os:ShortName>
-	<os:Description>Collection Specific Granule OSDDs are not supported for this provider.</os:Description>
-	<os:Contact><%= ENV['contact']%></os:Contact>
-</os:OpenSearchDescription>
+<?xml version="1.0" encoding="UTF-8" ?>
+<OpenSearchDescription
+	xmlns="http://a9.com/-/spec/opensearch/1.1/">
+	<ShortName>PLACEHOLDER</ShortName>
+	<Description>Collection Specific Granule OSDDs are not supported for this provider.</Description>
+	<Contact><%= ENV['contact']%></Contact>
+</OpenSearchDescription>
