--- a/app/views/granules/usgslsi.xml.erb
+++ b/app/views/granules/usgslsi.xml.erb
@@ -1,30 +1,34 @@
-<?xml version="1.0" encoding="UTF-8"?><OpenSearchDescription xmlns="http://a9.com/-/spec/opensearch/1.1/"
-                       xmlns:params ="http://a9.com/-/spec/opensearch/extensions/parameters/1.0/"
-                       xmlns:geo="http://a9.com/-/opensearch/extensions/geo/1.0/"
-                       xmlns:time="http://a9.com/-/opensearch/extensions/time/1.0/"
-                       xmlns:lta="/opensearch/extensions/1.0/"
-                       xmlns:esipdiscover="http://commons.esipfed.org/ns/discovery/1.2/">
-    <ShortName>USGS&#47;EROS OpenSearch</ShortName>
-    <Description>USGS&#47;EROS OpenSearch</Description>
-    <Url type="application/atom+xml" template="https://earthexplorer.usgs.gov/opensearch/granules.atom?uid={uid}&amp;datasetName=<%= @dataset_id %>&amp;entryId={lta:entryId}&amp;startIndex={startIndex?}&amp;count={count?}&amp;timeStart={time:start?}&amp;timeEnd={time:end?}&amp;geoBox={geo:box?}<%
-      if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
-        <params:Parameter name="datasetName" value="{lta:datasetName}" title="Dataset Name desired by the search client" minimum="0" maximum="1"></params:Parameter>
-        <params:Parameter name="entryId" value="{lta:entryId}" title="IDN Entry ID - Can be used in place of lta:datasetName" minimum="0" maximum="1"></params:Parameter>
-        <params:Parameter name="geoBox" value="{geo:box}" title="inventory which has a spatial extent overlapping this bounding box" minimum="0"/>
-        <params:Parameter name="timeStart" value="{time:start}"  minInclusive = '<%= @begin %>' maxInclusive = '<%= @end %>'  title="inventory which has a temporal extent containing this start time" minimum="0" />
-        <params:Parameter name="timeEnd" value="{time:end}" minInclusive = '<%= @begin %>' maxInclusive = '<%= @end %>' title="inventory which has a temporal extent containing this end time" minimum="0" />
-        <params:Parameter name="startIndex" value="{startIndex}" title="First result in the set returned by the search" minimum="0" minInclusive="1"/>
-        <params:Parameter name="count" value="{count}" title="Number of search results per page desired by the search client" minimum="0" minInclusive="1" maxInclusive="200"/>
-        <params:Parameter name="uid" value="{uid}" title="Defines a specific scene for retrieval" minimum="0" maximum="1"/>
-    </Url>
-    <Query role="example" lta:datasetName="CALVAL_PIS_MAURITANIA_1" startIndex="1" count="10" geo:box="-180.0,-90,180.0,90" time:start="1972-09-26" time:end="2020-04-07" esipdiscover:clientId="cwicClient"/>
-    <Query role="example" uid="CALVAL_PIS_MAURITANIA_1:entityId" esipdiscover:clientId="cwicClient"/>
-    <Tags>USGS,EROS,EarthExplorer,OpenSearch</Tags>
-    <Contact>custserv@usgs.gov</Contact>
-    <Developer>USGS/EROS Long Term Archive</Developer>
-    <Attribution>USGS/EROS</Attribution>
-    <SyndicationRight>open</SyndicationRight>
-    <Language>en-us</Language>
-    <OutputEncoding>UTF-8</OutputEncoding>
-    <InputEncoding>UTF-8</InputEncoding>
+<?xml version="1.0" encoding="UTF-8" ?>
+<OpenSearchDescription
+  xmlns="http://a9.com/-/spec/opensearch/1.1/"
+  xmlns:params ="http://a9.com/-/spec/opensearch/extensions/parameters/1.0/"
+  xmlns:geo="http://a9.com/-/opensearch/extensions/geo/1.0/"
+  xmlns:time="http://a9.com/-/opensearch/extensions/time/1.0/"
+  xmlns:lta="/opensearch/extensions/1.0/"
+  xmlns:esipdiscover="http://commons.esipfed.org/ns/discovery/1.2/">
+  <ShortName>USGS&#47;EROS OpenSearch</ShortName>
+  <Description>USGS&#47;EROS OpenSearch</Description>
+  <Contact>custserv@usgs.gov</Contact>
+
+  <Url type="application/atom+xml" template="https://earthexplorer.usgs.gov/opensearch/granules.atom?uid={uid}&amp;datasetName=<%= @dataset_id %>&amp;entryId={lta:entryId}&amp;startIndex={startIndex?}&amp;count={count?}&amp;timeStart={time:start?}&amp;timeEnd={time:end?}&amp;geoBox={geo:box?}<%-if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
+    <params:Parameter name="datasetName" value="{lta:datasetName}" title="Dataset Name desired by the search client" minimum="0" maximum="1"></params:Parameter>
+    <params:Parameter name="entryId" value="{lta:entryId}" title="IDN Entry ID - Can be used in place of lta:datasetName" minimum="0" maximum="1"></params:Parameter>
+    <params:Parameter name="geoBox" value="{geo:box}" title="inventory which has a spatial extent overlapping this bounding box" minimum="0" />
+    <params:Parameter name="timeStart" value="{time:start}"  minInclusive="<%= @begin %>" maxInclusive="<%= @end %>"  title="inventory which has a temporal extent containing this start time" minimum="0" />
+    <params:Parameter name="timeEnd" value="{time:end}" minInclusive="<%= @begin %>" maxInclusive="<%= @end %>" title="inventory which has a temporal extent containing this end time" minimum="0" />
+    <params:Parameter name="startIndex" value="{startIndex}" title="First result in the set returned by the search" minimum="0" minInclusive="1" />
+    <params:Parameter name="count" value="{count}" title="Number of search results per page desired by the search client" minimum="0" minInclusive="1" maxInclusive="200" />
+    <params:Parameter name="uid" value="{uid}" title="Defines a specific scene for retrieval" minimum="0" maximum="1" />
+  </Url>
+
+  <Query role="example" lta:datasetName="CALVAL_PIS_MAURITANIA_1" startIndex="1" count="10" geo:box="-180.0,-90,180.0,90" time:start="1972-09-26" time:end="2020-04-07" esipdiscover:clientId="cwicClient" />
+  <Query role="example" uid="CALVAL_PIS_MAURITANIA_1:entityId" esipdiscover:clientId="cwicClient" />
+
+  <Attribution>USGS/EROS</Attribution>
+  <Developer>USGS/EROS Long Term Archive</Developer>
+  <InputEncoding>UTF-8</InputEncoding>
+  <Language>en-us</Language>
+  <OutputEncoding>UTF-8</OutputEncoding>
+  <SyndicationRight>open</SyndicationRight>
+  <Tags>USGS,EROS,EarthExplorer,OpenSearch</Tags>
 </OpenSearchDescription>
