CMR-7290: Adds xmlns namespace to collections

--- a/app/views/collections/descriptor_document.xml.erb
+++ b/app/views/collections/descriptor_document.xml.erb
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<os:OpenSearchDescription xmlns:os="http://a9.com/-/spec/opensearch/1.1/"
+<os:OpenSearchDescription
+	xmlns="http://a9.com/-/spec/opensearch/1.1/"
+	xmlns:os="http://a9.com/-/spec/opensearch/1.1/"
 	xmlns:echo="https://cmr.earthdata.nasa.gov/search/site/docs/search/api.html#atom"
 	xmlns:geo="http://a9.com/-/opensearch/extensions/geo/1.0/"
 	xmlns:time="http://a9.com/-/opensearch/extensions/time/1.0/"
