--- a/app/views/granules/nrsc.xml.erb
+++ b/app/views/granules/nrsc.xml.erb
@@ -2,7 +2,7 @@
 <OpenSearchDescription
   xmlns="http://a9.com/-/spec/opensearch/1.1/"
   xmlns:geo="http://a9.com/-/opensearch/extensions/geo/1.0/"
-  xmlns:param="http://a9.com/-/spec/opensearch/extensions/parameters/1.0/"
+  xmlns:params="http://a9.com/-/spec/opensearch/extensions/parameters/1.0/"
   xmlns:time="http://a9.com/-/opensearch/extensions/time/1.0/">
   <ShortName>NRSC OpenSearch</ShortName>
   <Description>NRSC OpenSearch Services for IRS Data</Description>
