--- a/app/views/granules/ccmeo.xml.erb
+++ b/app/views/granules/ccmeo.xml.erb
@@ -2,7 +2,7 @@
  <OpenSearchDescription
   xmlns="http://a9.com/-/spec/opensearch/1.1/"
   xmlns:geo="http://a9.com/-/opensearch/extensions/geo/1.0/"
-  xmlns:param="http://a9.com/-/spec/opensearch/extensions/parameters/1.0/"
+  xmlns:params="http://a9.com/-/spec/opensearch/extensions/parameters/1.0/"
   xmlns:time="http://a9.com/-/opensearch/extensions/time/1.0/">
   <ShortName>Radarsat Imagery</ShortName>
   <LongName>Metadata and browse imagery are obtained from a search of the CEOCat-NEODF catalogues at CCMEO, Natural Resources Canada.</LongName>
@@ -14,13 +14,13 @@
 
   <!-- with reference to the Url element below, the startIndex and count parameters are mutually exclusive from the startPage parameter - the startPage parameter cannot be used with the startIndex and count parameters -->
   <Url type="text/html" template="https://eodms-sgdot.nrcan-rncan.gc.ca/apps/cgi/opensearch/eodms_opensearch_r1.sh?q=<%= @dataset_id %>&amp;id={geo:id?}&amp;bbox={geo:box?}&amp;dtstart={time:start?}&amp;dtend={time:end?}&amp;pw={startPage?}&amp;startIndex={startIndex?}&amp;count={count?}<%-if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
-    <param:Parameter name="dtstart" value="{time:start}" minimum="1"  minInclusive="<%= @begin %>" maxInclusive="<%= @end %>" title="Temporal Start" />
-    <param:Parameter name="dtend" value="{time:end}" minimum="0"  minInclusive="<%= @begin %>" maxInclusive="<%= @end %>" maxPeriod="P14D" relativeTo="{time:start}" title="Temporal End" />
+    <params:Parameter name="dtstart" value="{time:start}" minimum="1"  minInclusive="<%= @begin %>" maxInclusive="<%= @end %>" title="Temporal Start" />
+    <params:Parameter name="dtend" value="{time:end}" minimum="0"  minInclusive="<%= @begin %>" maxInclusive="<%= @end %>" maxPeriod="P14D" relativeTo="{time:start}" title="Temporal End" />
   </Url>
 
   <Url type="application/atom+xml" template="https://eodms-sgdot.nrcan-rncan.gc.ca/apps/cgi/opensearch/eodms_opensearch_r1.sh?q=<%= @dataset_id %>&amp;id={geo:id?}&amp;bbox={geo:box?}&amp;dtstart={time:start?}&amp;dtend={time:end?}&amp;pw={startPage?}&amp;startIndex={startIndex?}&amp;count={count?}&amp;format=atom<%-if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
-    <param:Parameter name="dtstart" value="{time:start}" minimum="1"  minInclusive="<%= @begin %>" maxInclusive="<%= @end %>" title="Temporal Start" />
-    <param:Parameter name="dtend" value="{time:end}" minimum="0"  minInclusive="<%= @begin %>" maxInclusive="<%= @end %>" maxPeriod="P14D" relativeTo="{time:start}" title="Temporal End" />
+    <params:Parameter name="dtstart" value="{time:start}" minimum="1"  minInclusive="<%= @begin %>" maxInclusive="<%= @end %>" title="Temporal Start" />
+    <params:Parameter name="dtend" value="{time:end}" minimum="0"  minInclusive="<%= @begin %>" maxInclusive="<%= @end %>" maxPeriod="P14D" relativeTo="{time:start}" title="Temporal End" />
   </Url>
 
   <!-- the following 2 examples apply to searching for Radarsat-1 raw scenes -->
