--- a/app/views/granules/mosdac.xml.erb
+++ b/app/views/granules/mosdac.xml.erb
@@ -10,7 +10,7 @@
   <Description>MOSDAC Dataset search using geo, time and parameter extensions</Description>
   <Contact>admin@sac.isro.gov.in</Contact>
 
-  <Url type="application/atom+xml" rel="results" params:method="GET" template="https://mosdac.gov.in/opensearch/datasets.atom?datasetId=<%= @dataset_id %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;startIndex={startPage?}&amp;count={count?}&amp;gId={gId?}<%-if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
+  <Url type="application/atom+xml" rel="results" params:method="GET" template="https://mosdac.gov.in/apios/osdd.xml?datasetId=<%= @dataset_id %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;startIndex={startPage?}&amp;count={count?}&amp;gId={gId?}<%-if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
     <params:Parameter name="datasetId" value='{geo:name}' title="Standard Products archived at MOSDAC registered at GCMD" minimum='1' maximum="1" />
     <params:Parameter name="boundingBox" value='{geo:box}' title="spatial extent overlapping this bound box WEST-LONG, SOUTH-LAT, EAST-LONG, NORTH-LAT" minimum="0" />
     <params:Parameter name="startTime" value='{time:start}'  minInclusive = '<%= @begin %>' maxInclusive = '<%= @end %>'  title="temporal extent containing this start time. The string should match 'YYYY-MM-DD" minimum="0" />
