CMR-8090: Addresses PR feedback

--- a/app/views/home/docs.html.erb
+++ b/app/views/home/docs.html.erb
@@ -209,7 +209,7 @@
 
   <p>
     To retrieve information for a specific provider and their collections (in JSON format) visit the
-    <a target="_blank" class="ext" href="<%= Rails.configuration.relative_url_root%>/api/holdings/provider_name.json">provider holdings endpoint</a>, ensure to change `provider_name` to a support OpenSearch provider.
+    <a target="_blank" class="ext" href="<%= Rails.configuration.relative_url_root%>/api/holdings/provider_name.json">provider holdings endpoint</a>, ensure to change `provider_name` to a supported OpenSearch provider.
   </p>
 
   <pre>{
