--- a/app/views/collections/descriptor_document.xml.erb
+++ b/app/views/collections/descriptor_document.xml.erb
@@ -5,7 +5,7 @@
   xmlns:geo="http://a9.com/-/opensearch/extensions/geo/1.0/"
   xmlns:time="http://a9.com/-/opensearch/extensions/time/1.0/"
   xmlns:params="http://a9.com/-/spec/opensearch/extensions/parameters/1.0/"
-  xmlns:referrer="http://www.opensearch.org/Specifications/OpenSearch/Extensions/Referrer/1.0"
+  xmlns:referrer="https://github.com/dewitt/opensearch/blob/master/mediawiki/Specifications/OpenSearch/Extensions/Referrer/1.0"
   xmlns:eo="http://a9.com/-/opensearch/extensions/eo/1.0/"
   xmlns:atom="http://www.w3.org/2005/Atom">
   <os:ShortName>CMR Collections</os:ShortName>
