--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <aside class="sidebar-container">
   <p>
-    CMR provides a search interface based on the <a class="ext" target="_blank" href='http://www.opensearch.org/Home'>OpenSearch</a> concept in
+    CMR provides a search interface based on the <a class="ext" target="_blank" href='https://github.com/dewitt/opensearch'>OpenSearch</a> concept in
     general and the ESIP (Earth Science Information
     Partners) <a class="ext" target="_blank" href='http://wiki.esipfed.org/index.php/Federated_Search'>federated search</a> concept in particular.
     Usage details and sample CMR OpenSearch invocations are available in the <%= link_to "CMR OpenSearch documentation page", home_docs_path %>.
@@ -8,7 +8,7 @@
 
   <div class="extended-content">
     <p>
-      From the <a class="ext" target="_blank" href='http://www.opensearch.org/Specifications/OpenSearch/1.1'>Open Search draft specification</a>,
+      From the <a class="ext" target="_blank" href='https://github.com/dewitt/opensearch/blob/master/mediawiki/Specifications/OpenSearch/1.1/Draft%205.wiki'>Open Search draft specification</a>,
 
     <blockquote>OpenSearch is a collection of simple formats for the sharing of search results.
       You can use Open Search formats to help people discover and use your search engine and to syndicate search results
@@ -17,7 +17,7 @@
     </p>
     <p>
       Open Search uses Open Search Descriptor Documents (OSDDs) to describe the web interface of a search engine.
-      We use <a class="ext" target="_blank" href='http://www.opensearch.org/Specifications/OpenSearch/1.1'>Open Search 1.1</a> to provide OSDDs at
+      We use <a class="ext" target="_blank" href='https://github.com/dewitt/opensearch/blob/master/mediawiki/Specifications/OpenSearch/1.1/Draft%205.wiki'>Open Search 1.1</a> to provide OSDDs at
       the
       collection and granule level for searching the CMR inventory.
     </p>
