CMR-10630: modifies contact to doug, and updates opensearch.org links

--- a/app/views/home/docs.html.erb
+++ b/app/views/home/docs.html.erb
@@ -16,7 +16,7 @@
 <section>
   <h2><a name="overview"/>CMR OpenSearch Overview</h2>
   <p>CMR OpenSearch is a CMR collections and granules search implementation based on the
-    <a class="ext" target="_blank" href='http://www.opensearch.org/Home'>OpenSearch 1.1 (Draft 5) specification</a>. It
+    <a class="ext" target="_blank" href='https://github.com/dewitt/opensearch/blob/master/mediawiki/Specifications/OpenSearch/1.1/Draft%205.wiki'>OpenSearch 1.1 (Draft 5) specification</a>. It
     allows clients to formulate OpenSearch compliant queries against the CMR collections and granules inventory and
     specify
     the desired search results format as OpenSearch compliant
@@ -32,19 +32,19 @@
   <h3><a name="specs-of-interest"/>Specifications of interest</h3>
   <p>CMR OpenSearch is compliant with the following specifications, best practices and implementation guides:
   <ul>
-    <li><a class="ext" target="_blank" href='http://www.opensearch.org/Home'>OpenSearch 1.1 (Draft 5) specification</a>
+    <li><a class="ext" target="_blank" href='https://github.com/dewitt/opensearch/blob/master/mediawiki/Specifications/OpenSearch/1.1/Draft%205.wiki'>OpenSearch 1.1 (Draft 5) specification</a>
     </li>
     <li>
-      <a class="ext" target="_blank" href='http://www.opensearch.org/Specifications/OpenSearch/Extensions/Geo/1.0/Draft_2'>OpenSearch
+      <a class="ext" target="_blank" href='https://github.com/dewitt/opensearch/blob/master/mediawiki/Specifications/OpenSearch/Extensions/Geo/1.0/Draft%202.wiki'>OpenSearch
         Geo extension 1.0 (Draft 2)</a></li>
     <li>
-      <a class="ext" target="_blank" href='http://www.opensearch.org/Specifications/OpenSearch/Extensions/Time/1.0/Draft_1'>OpenSearch
+      <a class="ext" target="_blank" href='https://github.com/dewitt/opensearch/blob/master/mediawiki/Specifications/OpenSearch/Extensions/Time/1.0/Draft%201.wiki'>OpenSearch
         Time extension 1.0 (Draft 1)</a></li>
     <li>
-      <a class="ext" target="_blank" href='http://www.opensearch.org/Specifications/OpenSearch/Extensions/Parameter/1.0'>OpenSearch
+      <a class="ext" target="_blank" href='https://github.com/dewitt/opensearch/blob/master/mediawiki/Specifications/OpenSearch/Extensions/Parameter/1.0/Draft%202.wiki'>OpenSearch
         Parameter extension 1.0 (Draft 1)</a></li>
     <li>
-      <a class="ext" target="_blank" href='http://www.opensearch.org/Specifications/OpenSearch/Extensions/Relevance/1.0/Draft_1'>OpenSearch
+      <a class="ext" target="_blank" href='http://github.com/dewitt/opensearch/blob/master/mediawiki/Specifications/OpenSearch/Extensions/Relevance/1.0/Draft%201.wiki'>OpenSearch
         Relevance extension 1.0 (Draft 1)</a></li>
     <li>
       <a class="ext" target="_blank" href='http://www.opengeospatial.org/standards/opensearchgeo'>OGC OpenSearch Geo and
